--- a/hotelReservation/docker-compose.yml
+++ b/hotelReservation/docker-compose.yml
@@ -2,18 +2,43 @@ version: "3.8"
 
 services:
 
-  pyroscope:
-    image: grafana/pyroscope:latest
+  grafana:
+    image: grafana/grafana:latest
     environment:
-      JAEGER_AGENT_HOST: tempo
-      JAEGER_SAMPLER_TYPE: const
-      JAEGER_SAMPLER_PARAM: 1
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_INSTALL_PLUGINS=grafana-pyroscope-app
+      - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles tracesEmbeddedFlameGraph
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
     ports:
-      - '4040:4040'
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: any
+      - '3000:3000'
+
+  # tempo:
+  #   image: grafana/tempo:latest
+  #   command: [ "-config.file=/etc/tempo.yml" ]
+  #   volumes:
+  #     - ./tempo/tempo.yml:/etc/tempo.yml
+  #   ports:
+  #     - "14268:14268"  # jaeger ingest
+  #     - "3200:3200"   # tempo
+  #     - "9095:9095" # tempo grpc
+  #     - "4317:4317"  # otlp grpc
+  #     - "4318:4318"  # otlp http
+  #     - "9411:9411"   # zipkin
+
+  # pyroscope:
+  #   image: grafana/pyroscope:latest
+  #   environment:
+  #     JAEGER_AGENT_HOST: tempo
+  #     JAEGER_SAMPLER_TYPE: const
+  #     JAEGER_SAMPLER_PARAM: 1
+  #   command: [ "-config.file=/etc/pyroscope.yml" ]
+  #   ports:
+  #     - '4040:4040'
+  #   volumes:
+  #     - ./pyroscope/pyroscope.yml:/etc/pyroscope.yml
 
 
   consul:
@@ -33,6 +58,7 @@ services:
     configs:
       - source: server_config
         target: /config.json
+    # network_mode: "host"
     environment:
       - TLS
       - GC
@@ -50,6 +76,11 @@ services:
       replicas: 3
       restart_policy:
         condition: any
+    external_links:
+      - pyroscope
+      - "host.docker.internal:host-gateway"
+
+    
 
   profile:
     configs:
