--- a/hotelReservation/docker-compose.yml
+++ b/hotelReservation/docker-compose.yml
@@ -1,6 +1,27 @@
 version: "3.8"
 
 services:
+  pyroscope:
+    image: grafana/pyroscope:latest
+    environment:
+      JAEGER_AGENT_HOST: tempo
+      JAEGER_SAMPLER_TYPE: const
+      JAEGER_SAMPLER_PARAM: 1
+    ports:
+    - '4040:4040'
+
+  grafana:
+    image: grafana/grafana:latest
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_INSTALL_PLUGINS=grafana-pyroscope-app
+      - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles tracesEmbeddedFlameGraph
+    ports:
+      - '3000:3000'
+
+
   consul:
     image: hashicorp/consul:latest
     ports:
