--- a/hotelReservation/docker-compose.yml
+++ b/hotelReservation/docker-compose.yml
@@ -1,14 +1,33 @@
 version: "3.8"
 
 services:
+
+  tempo:
+    image: grafana/tempo:latest
+    command: [ "-config.file=/etc/tempo.yml" ]
+    volumes:
+      - ./tempo/tempo.yml:/etc/tempo.yml
+    ports:
+      - "14268:14268"  # jaeger ingest
+      - "6831:6831/udp"
+      - "3200:3200"   # tempo
+      - "9095:9095" # tempo grpc
+      - "4317:4317"  # otlp grpc
+      - "4318:4318"  # otlp http
+      - "9411:9411"   # zipkin
+
+
   pyroscope:
     image: grafana/pyroscope:latest
     environment:
-      JAEGER_AGENT_HOST: tempo
+      JAEGER_AGENT_HOST: jaeger
       JAEGER_SAMPLER_TYPE: const
       JAEGER_SAMPLER_PARAM: 1
+    command: [ "-config.file=/etc/pyroscope.yml" ]
     ports:
-    - '4040:4040'
+      - '4040:4040'
+    volumes:
+      - ./pyroscope/pyroscope.yml:/etc/pyroscope.yml
 
   grafana:
     image: grafana/grafana:latest
@@ -18,6 +37,8 @@ services:
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_INSTALL_PLUGINS=grafana-pyroscope-app
       - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles tracesEmbeddedFlameGraph
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
     ports:
       - '3000:3000'
 
@@ -239,22 +260,22 @@ services:
       restart_policy:
         condition: any
 
-  jaeger:
-    image: jaegertracing/all-in-one:latest
-    ports:
-      - "14269"
-      - "5778:5778"
-      - "14268:14268"
-      - "14267"
-      - "16686:16686"
-      - "5775:5775/udp"
-      - "6831:6831/udp"
-      - "6832:6832/udp"
-    restart: always
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: any
+  # jaeger:
+  #   image: jaegertracing/all-in-one:latest
+  #   ports:
+  #     - "14269"
+  #     - "5778:5778"
+  #     - "14268:14268"
+  #     - "14267"
+  #     - "16686:16686"
+  #     - "5775:5775/udp"
+  #     - "6831:6831/udp"
+  #     - "6832:6832/udp"
+  #   restart: always
+  #   deploy:
+  #     replicas: 1
+  #     restart_policy:
+  #       condition: any
 
   memcached-rate:
     image: memcached:latest
