--- a/hotelReservation/tempo/tempo.yml
+++ b/hotelReservation/tempo/tempo.yml
@@ -37,3 +37,8 @@ storage:
       path: /tmp/tempo/wal             # where to store the wal locally
     local:
       path: /tmp/tempo/blocks
+
+overrides:
+  defaults:
+    ingestion:
+      max_traces_per_user: 100000
