Adjust to ensure that notnet local code is picked up

--- a/hotelReservation/Dockerfile
+++ b/hotelReservation/Dockerfile
@@ -4,9 +4,12 @@ FROM golang:1.22 as builder
 WORKDIR /workspace
 
 # Copy necessary files for dependency resolution
-COPY go.sum go.sum
-COPY go.mod go.mod
+COPY go.sum go.mod ./
 COPY vendor/ vendor/
+
+ARG CACHE_BUST=1
+COPY notnets_grpc notnets_grpc
+COPY notnets_grpc/notnets_shm notnets_grpc/notnets_shm
 
 # Add the replace directive to point to the local copy of notnets_grpc within the container
 RUN go mod edit -replace github.com/EINRf/notnets_grpc=/workspace/notnets_grpc
@@ -22,10 +25,7 @@ COPY services/ services/
 COPY tls/ tls/
 COPY tracing/ tracing/
 COPY tune/ tune/
-
 COPY config.json config.json
-COPY notnets_grpc notnets_grpc
-COPY notnets_grpc/notnets_shm notnets_grpc/notnets_shm
 
 ENV LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
 ENV CGO_ENABLED=1
