--- a/hotelReservation/config.json
+++ b/hotelReservation/config.json
@@ -22,6 +22,7 @@
   "SearchPort": "8082",
   "UserPort": "8086",
   "UserMongoAddress": "mongodb-user:27017",
+  "BenchmarkPort": "8090",
   "KnativeDomainName": ""
 }
 
