--- a/hotelReservation/Dockerfile
+++ b/hotelReservation/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the Go application
-FROM golang:1.22 as builder
+FROM golang:1.22 AS builder
 
 WORKDIR /workspace
 
@@ -16,10 +16,12 @@ COPY services/ services/
 COPY tls/ tls/
 COPY tracing/ tracing/
 COPY tune/ tune/
+COPY bin/ bin/
 
 COPY config.json config.json
 
 # Build the Go application
+ENV GOBIN=/workspace
 RUN CGO_ENABLED=0 GOOS=linux GO111MODULE=on go install -ldflags="-s -w" -mod=vendor ./cmd/...
 
 # Stage 2: Create the final image
@@ -28,6 +30,4 @@ FROM alpine:latest
 WORKDIR /workspace
 
 # Copy the executables from the builder stage
-COPY --from=builder /go/bin/* /workspace/
-COPY --from=builder /workspace/config.json /workspace/config.json
-
+COPY --from=builder /workspace/ /workspace/
