--- a/hotelReservation/tempo/tempo.yml
+++ b/hotelReservation/tempo/tempo.yml
@@ -24,11 +24,11 @@ distributor:
     opencensus:
 
 ingester:
-  max_block_duration: 5m               # cut the headblock when this much time passes. this is being set for demo purposes and should probably be left alone normally
+  max_block_duration: 60m               # cut the headblock when this much time passes. this is being set for demo purposes and should probably be left alone normally
 
 compactor:
   compaction:
-    block_retention: 2h                # overall Tempo trace retention. set for demo purposes
+    block_retention: 3h                # overall Tempo trace retention. set for demo purposes
 
 storage:
   trace:
@@ -41,4 +41,4 @@ storage:
 overrides:
   defaults:
     ingestion:
-      max_traces_per_user: 200000
+      max_traces_per_user: 2000000
